# SomeNewEngineIDK

./: .clang-format  .gitignore  CMakeLists.txt  buildscript.sh
.github/workflows/: build-check.yml  clang-check.yml  flawfinder-check.yml
projectdir/: Game.cpp  Game.h
src/: Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  main.cpp
